# WeatherForecast

./: README.md
WeatherForecast/: WeatherForecast.sln  opencv2411.props
WeatherForecast/Debug/: WeatherForecast.ilk  city_.ini  province.ini
WeatherForecast/WeatherForecast/: CHttpClient.cpp  CHttpClient.h  CNetworkException.cpp  CNetworkException.h  ReadMe.txt  WeatherForecast.aps  WeatherForecast.cpp  WeatherForecast.h  WeatherForecast.rc  WeatherForecast.vcxproj  WeatherForecast.vcxproj.filters  WeatherForecastDlg.cpp  WeatherForecastDlg.h  city.ini  libcurl.lib  resource.h  stdafx.cpp  tmp.xml
WeatherForecast/WeatherForecast/CvvImage/: CMakeLists.txt  CvvImage.cpp  CvvImage.h
WeatherForecast/WeatherForecast/res/: WeatherForecast.rc2
WeatherForecast/ipch/weatherforecast-97a737bd/: weatherforecast-4a45512d.ipch  weatherforecast-f48ddb33.ipch
